package com.tetras.librarie;
import java.util.Arrays;

public class BulbizarreObscure extends Pokemon {
    public BulbizarreObscure() {
        super(Arrays.asList(Type.Poison));
    }
}
