package com.tetras.librarie;
import java.util.Arrays;

public class FlorizarreObscure extends Pokemon {
    public FlorizarreObscure() {
        super(Arrays.asList(Type.Poison));
    }
}
