package com.tetras.librarie;
import java.util.Arrays;

public class HerbizarreObscure extends Pokemon {
    public HerbizarreObscure() {
        super(Arrays.asList(Type.Poison));
    }
}
