package com.tetras.librarie;


public interface IMegaEvoluable {

    Pokemon megaEvoluer();

}