package com.tetras.librarie;
import java.util.Arrays;

public class MegaFlorizzare extends Pokemon{
    
    public MegaFlorizzare() {
        super(Arrays.asList(Type.Plante, Type.Poison));
    }
}
